<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_one_way_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.buses254.OneWayTrip"
    tools:showIn="@layout/activity_one_way_trip">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dets_one_way_trip"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/OneWayTrip"
        android:background="@color/lighterCyan"
        >


        <TextView
        android:id="@+id/tvDepartFrom"
        android:text="Depart From"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp"
             />


        <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinTravelTime"
            android:layout_below="@+id/etDateOfTravel"
            android:layout_alignLeft="@+id/spinner"
            android:layout_alignStart="@+id/spinner"
            android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/tvDateOfTravel"
        android:text="@string/dateoftravel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/Destination"
        android:layout_alignParentLeft="true"
         />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Destination"
        android:layout_marginRight="35dp"/>

        <TextView
            android:id="@+id/Destination"
            android:text="@string/destination"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="35dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_below="@+id/tvDepartFrom"
             />

        <TextView
            android:id="@+id/tvTimeOfTravel"
            android:text="@string/time_of_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@+id/etDateOfTravel"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"

             />

        <EditText
            android:id="@+id/etDateOfTravel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:hint="mm/dd/yyyy"
            android:focusable="false"
            android:layout_below="@+id/spinner"
            android:layout_alignParentRight="true"
            android:layout_marginTop="35dp"


             />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinDepartFrom"
            android:layout_alignTop="@+id/tvDepartFrom"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="35dp"
             />


    </RelativeLayout>

    <Button
        android:id="@+id/btCheckAvail"
        android:text="@string/check_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp" />

    <Button
        android:id="@+id/OneWayTrip"
        android:text="@string/one_way_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/ReturnTrip"
        android:text="@string/return_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button"
        android:layout_above="@+id/dets_one_way_trip"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp" />

</RelativeLayout>